<resources>
    <string name="app_name">Assignment 3</string>
    <string name="mvpButtonText">MVP</string>
    <string name="mvvmButtonText">MVVM</string>
    <string name="mvp_fragment">MVP Fragment</string>
    <string name="mvvm_fragment">MVVM Fragment</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="divide">DIVIDE</string>
    <string name="result">Result: %.2f</string>
</resources>